--- a/app/view_subjects/view_subjects.module.css
+++ b/app/view_subjects/view_subjects.module.css
@@ -6,6 +6,9 @@
   padding-left: 10px;
   padding-right: 10px;
 }
+.edit {
+  text-align: center;
+}
 .button{
  
   display: inline-block;
@@ -44,10 +47,12 @@
   margin: 10px 0px;
   padding: 10px 10px;
   border-radius: 5px;
+  align-items: center;
 }
 
 .col-1 {
   flex-basis: 10%;
+  margin-left: 3%;
 }
 
 .col-2 {
