--- a/app/dashboard/Dashboard.module.css
+++ b/app/dashboard/Dashboard.module.css
@@ -67,4 +67,24 @@
     background-color: #e9e9e9;
     padding: 20px;
   }
+
+  .marquee-container {
+    width: 100%;
+    overflow: hidden;
+  }
+  
+  .marquee-content {
+    white-space: nowrap;
+    animation: marquee 10s linear infinite;
+  }
+  
+  @keyframes marquee {
+    0% {
+      transform: translateX(100%);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+  }
+  
   
