--- a/app/dashboard/Dashboard.module.css
+++ b/app/dashboard/Dashboard.module.css
@@ -86,5 +86,10 @@
       transform: translateX(-100%);
     }
   }
+  .notificationsBox ul li {
+    width: 100%;
+    overflow: hidden;
+    padding: 10px;
+  }
   
   
