--- a/app/dashboard/Dashboard.module.css
+++ b/app/dashboard/Dashboard.module.css
@@ -53,7 +53,10 @@
     justify-content: space-around;
     height: 500px;
     text-align: center;
-   
+    background-image: url("../../mceme_pic.webp");
+    background-repeat: no-repeat;
+    background-size: 100% ;
+    background-position: center;
   }
   
   .left-box {
